--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "chart.js": "^2.8.0",
     "quasar": "^1.0.0",
     "vue-chartjs": "^3.4.2",
-    "vue-i18n": "^8.0.0"
+    "vue-i18n": "^8.0.0",
+    "vue-qrcode-component": "^2.1.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
